Fixed Availability & Tentatives Deleted
