# db/schema.rb
@@ -10,7 +10,7 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema[7.2].define(version: 2024_10_03_145607) do
+ActiveRecord::Schema[7.2].define(version: 2024_10_06_183618) do
   # These are extensions that must be enabled in order to support this database
   enable_extension "pgcrypto"
   enable_extension "plpgsql"
@@ -19,11 +19,10 @@ ActiveRecord::Schema[7.2].define(version: 2024_10_03_145607) do
     t.uuid "user_id", null: false
     t.bigint "topic_id", null: false
     t.string "description"
-    t.datetime "date_from"
-    t.datetime "date_to"
     t.string "link"
     t.datetime "created_at", null: false
     t.datetime "updated_at", null: false
+    t.string "availability"
     t.index ["topic_id"], name: "index_availability_tutors_on_topic_id"
     t.index ["user_id"], name: "index_availability_tutors_on_user_id"
   end
@@ -66,16 +65,6 @@ ActiveRecord::Schema[7.2].define(version: 2024_10_03_145607) do
     t.index ["university_id"], name: "index_subjects_on_university_id"
   end
 
-  create_table "tentatives", force: :cascade do |t|
-    t.string "day"
-    t.datetime "schedule_from"
-    t.datetime "schedule_to"
-    t.bigint "availability_tutor_id", null: false
-    t.datetime "created_at", null: false
-    t.datetime "updated_at", null: false
-    t.index ["availability_tutor_id"], name: "index_tentatives_on_availability_tutor_id"
-  end
-
   create_table "topics", force: :cascade do |t|
     t.string "name"
     t.string "description"
@@ -83,17 +72,6 @@ ActiveRecord::Schema[7.2].define(version: 2024_10_03_145607) do
     t.datetime "updated_at", null: false
     t.bigint "subject_id", null: false
     t.index ["subject_id"], name: "index_topics_on_subject_id"
-  end
-
-  create_table "tutors", force: :cascade do |t|
-    t.uuid "user_id", null: false
-    t.integer "ranking"
-    t.integer "amount_given_lessons"
-    t.integer "amount_given_topics"
-    t.integer "amount_attended_students"
-    t.datetime "created_at", null: false
-    t.datetime "updated_at", null: false
-    t.index ["user_id"], name: "index_tutors_on_user_id"
   end
 
   create_table "universities", force: :cascade do |t|
@@ -111,13 +89,13 @@ ActiveRecord::Schema[7.2].define(version: 2024_10_03_145607) do
     t.string "image_url"
     t.datetime "created_at", null: false
     t.datetime "updated_at", null: false
+    t.integer "attended_lessons", default: 0
+    t.integer "attended_tutors", default: 0
+    t.integer "attended_topics", default: 0
     t.integer "ranking"
     t.integer "amount_given_lessons"
     t.integer "amount_given_topics"
     t.integer "amount_attended_students"
-    t.integer "attended_lessons", default: 0
-    t.integer "attended_tutors", default: 0
-    t.integer "attended_topics", default: 0
   end
 
   add_foreign_key "availability_tutors", "topics"
@@ -128,7 +106,5 @@ ActiveRecord::Schema[7.2].define(version: 2024_10_03_145607) do
   add_foreign_key "student_topics", "topics"
   add_foreign_key "student_topics", "users"
   add_foreign_key "subjects", "universities"
-  add_foreign_key "tentatives", "availability_tutors"
   add_foreign_key "topics", "subjects"
-  add_foreign_key "tutors", "users"
 end
