# swagger/v1/swagger.yaml
@@ -143,35 +143,12 @@ paths:
                   descripcionTopic:
                     type: string
                     description: Description of the topic
-                  date_toDisponibilidad:
-                    type: string
-                    format: date
-                    description: End date of availability
-                  date_fromDisponibilidad:
-                    type: string
-                    format: date
-                    description: Start date of availability
                   descripciondisponibilidad:
                     type: string
                     description: Description of the availability
                   link:
                     type: string
                     description: Link associated with the availability
-                  tentatives:
-                    type: array
-                    items:
-                      type: object
-                      properties:
-                        day:
-                          type: string
-                          format: date
-                          description: Day of the tentative schedule
-                        schedule_from:
-                          type: string
-                          description: Start time of the tentative schedule
-                        schedule_to:
-                          type: string
-                          description: End time of the tentative schedule
         '404':
           description: User or Topic not found
           content:
@@ -353,12 +330,6 @@ paths:
                       type: integer
                     description:
                       type: string
-                    date_from:
-                      type: string
-                      format: date-time
-                    date_to:
-                      type: string
-                      format: date-time
                     link:
                       type: string
       tags:
@@ -386,12 +357,6 @@ paths:
                     type: integer
                   description:
                     type: string
-                  date_from:
-                    type: string
-                    format: date-time
-                  date_to:
-                    type: string
-                    format: date-time
                   link:
                     type: string
         '404':
@@ -821,35 +786,15 @@ components:
       properties:
         id:
           type: integer
-        date_from:
-          type: string
-          format: date-time
-        date_to:
-          type: string
-          format: date-time
         description:
           type: string
         link:
           type: string
-        tentatives:
-          type: array
-          items:
-            type: object
-            properties:
-              day:
-                type: string
-              schedule_from:
-                type: string
-                format: date-time
-              schedule_to:
-                type: string
-                format: date-time
 
     CreateAvailabilityTutorInputWithTopic:
       type: object
       required:
         - description
-        - date_from
         - date_to
         - link
       properties:
@@ -860,61 +805,22 @@ components:
               type: string
             asset:
               type: string
-        date_from:
-          type: string
-          format: date-time
-        date_to:
-          type: string
-          format: date-time
         description:
           type: string
         link:
           type: string
-        tentatives:
-          type: array
-          items:
-            type: object
-            properties:
-              day:
-                type: string
-              schedule_from:
-                type: string
-                format: date-time
-              schedule_to:
-                type: string
-                format: date-time
 
     CreateAvailabilityTutorInputWithoutTopic:
       type: object
       required:
         - description
-        - date_from
         - date_to
         - link
       properties:
-        date_from:
-          type: string
-          format: date-time
-        date_to:
-          type: string
-          format: date-time
         description:
           type: string
         link:
           type: string
-        tentatives:
-          type: array
-          items:
-            type: object
-            properties:
-              day:
-                type: string
-              schedule_from:
-                type: string
-                format: date-time
-              schedule_to:
-                type: string
-                format: date-time
 
     Meet:
       type: object
